# RAG-MATH

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
conf/: faiss.yaml  milvus.yaml  model.yaml
data/: df_gk_math.xlsx
gaokao_rag/: __init__.py  api.py  cfg.py  cli.py  embed.py  formula.py  hub.py  retriever.py  score.py  text_only.py
gaokao_rag/conf/: base.yaml
gaokao_rag/data/: df_gk_math_副本.xlsx
gaokao_rag/store/: __init__.py  base.py  faiss.py  milvus.py
scripts/: docker-compose.yml  setup_env.sh
